# fast-api

./: Dockerfile  docker-compose.yml  pyproject.toml
tests/: test_app.py
